# ohtu-sourcevault

./: .coveragerc  .gitignore  .pylintrc  README.md  asiakastapaamiset.md  pyproject.toml
.github/workflows/: main.yml
documents/: retro.md
src/: AppLibrary.py  app_library.py  app_ui.py  bibtex_converter.py  console_io.py  database_handler.py  doi_seacher.py  index.py  reference.py  root.py  source_constructor.py  source_stub.py  sql_server.py  src\data  stub_io.py  writer.py
src/tests/: book_source.robot  delete_source.robot  list_source.robot  reference_test.py  resource.robot  root_test.py  source_stub.py  writer_test.py
src/tests/robot/: bibtex.robot  book_source.robot  bucket_conf.robot  delete_source.robot  doi.robot  edit.robot  filter.robot  list_source.robot  resource.robot  source_type.robot  sync.robot  tags.robot
