[tool.poetry]
name = "sourcevault"
version = "0.1.0"
description = ""
authors = ["GlobalYam <aarni.hellen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
habanero = "^1.2.3"
boto3 = "^1.33.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
